--- a/requirements1.txt
+++ b/requirements1.txt
@@ -43,6 +43,7 @@ einops==0.6.0
 entrypoints==0.3
 et-xmlfile==1.0.1
 executing==1.2.0
+fairscale==0.4.4
 fastcache==1.1.0
 filelock==3.9.0
 firebase-admin==6.2.0
@@ -122,6 +123,7 @@ package-name==0.1
 pandas==1.5.2
 parso==0.7.0
 pathspec==0.7.0
+pathy==0.6.1
 patsy==0.5.1
 pep8==1.7.1
 pipreqs==0.4.11
@@ -166,6 +168,7 @@ requests==2.28.1
 requests-oauthlib==1.3.1
 rich==13.3.2
 rsa==4.9
+salesforce-lavis==1.0.2
 scikit-image==0.18.1
 scikit-learn==1.2.0
 scipy==1.9.3
@@ -175,8 +178,12 @@ simplegeneric==0.8.1
 six==1.16.0
 smart-open==5.2.1
 smmap==5.0.0
+spacy==3.2.0
+spacy-legacy==3.0.8
+spacy-loggers==1.0.1
 srsly==2.4.2
 stack-data==0.6.2
+streamlit==1.19.0
 tables==3.6.1
 tenacity==8.2.2
 tensorboard==2.12.0
@@ -192,11 +199,14 @@ text-unidecode==1.3
 thinc==8.0.13
 threadpoolctl==3.1.0
 tifffile==2020.10.1
+timm==0.4.12
 tokenizers==0.13.2
 torch==1.13.1
+torchtext==0.11.0
 torchvision==0.14.1
 transformers==4.26.1
 typeguard==3.0.2
+typer==0.7.0
 typing-extensions==4.5.0
 tzdata==2022.7
 tzlocal==4.2
